<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_view_image"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_view_image"/>
    <item
        android:id="@+id/action_save_image"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_save_image"/>
    
    <item
        android:id="@+id/action_save_and_share_image"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_save_and_share_image"/>
    
    <item
        android:id="@+id/action_insert_image"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_insert_image"/>
        
    <item
        android:id="@+id/action_eraser"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_eraser"/>
        
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_reset"/>
        
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/action_rate"/>
        
    <item
        android:id="@+id/action_like"
        android:orderInCategory="8"
        android:showAsAction="never"
        android:title="@string/action_like"/>
</menu>